// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppSidebar should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="sym7snt-sidebar"
      >
        <div
          class="container-flex is-column has-padding"
        >
          <div
            class="syuub8n-sidebar-wrap"
          >
            <h5
              class="title is-5"
              id=""
            >
              Browse Apps
            </h5>
            <h6
              class="title is-6 semyxxp-sub-heading"
              id=""
            >
              Search
            </h6>
            <form
              action="#"
            >
              <div
                class="field"
              >
                <div
                  class="control has-icons-right"
                >
                  <input
                    class="input is-primary"
                    data-test=""
                    id="search"
                    name="search"
                    placeholder="Search..."
                    type="text"
                    value=""
                  />
                  <span
                    class="icon is-right"
                  >
                    <button
                      class="b101rvil-btn-search"
                      type="submit"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </button>
                  </span>
                </div>
              </div>
              <div
                class="field pb-2 "
              >
                <div
                  class="control"
                >
                  <label
                    class="label"
                    for="searchBy"
                  />
                  <div
                    class="columns is-multiline is-gapless"
                    data-test=""
                  >
                    <div
                      class="column is-full"
                      data-test=""
                    >
                      <div
                        class="radio-wrap"
                      >
                        <input
                          checked=""
                          class="checkbox "
                          id="searchByBy App Name"
                          name="searchBy"
                          type="radio"
                          value="appName"
                        />
                        <label
                          class="label"
                          for="searchByBy App Name"
                        >
                          By App Name
                        </label>
                      </div>
                    </div>
                    <div
                      class="column is-full"
                      data-test=""
                    >
                      <div
                        class="radio-wrap"
                      >
                        <input
                          class="checkbox "
                          id="searchByBy Company"
                          name="searchBy"
                          type="radio"
                          value="companyName"
                        />
                        <label
                          class="label"
                          for="searchByBy Company"
                        >
                          By Company
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            class="syuub8n-sidebar-wrap"
          >
            <h6
              class="title is-6 semyxxp-sub-heading"
              id=""
            >
              Filter
            </h6>
            <ul
              class="lgshhkn-list-categories"
            >
              <li
                class="c7mfp8v-category-item chefj90-category-item-active"
              >
                <a
                  href="#"
                >
                  All
                </a>
              </li>
              <li
                class="c7mfp8v-category-item"
              >
                <a
                  data-test-category-id="3"
                  href="#"
                >
                  Game
                </a>
              </li>
              <li
                class="c7mfp8v-category-item"
              >
                <a
                  data-test-category-id="2"
                  href="#"
                >
                  entertainment
                </a>
              </li>
              <li
                class="c7mfp8v-category-item"
              >
                <a
                  data-test-category-id="1"
                  href="#"
                >
                  education
                </a>
              </li>
              <li
                class="c7mfp8v-category-item"
              >
                <a
                  data-test-category-id="DIRECT_API_APPS_FILTER"
                  href="#"
                >
                  Integration
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="sym7snt-sidebar"
    >
      <div
        class="container-flex is-column has-padding"
      >
        <div
          class="syuub8n-sidebar-wrap"
        >
          <h5
            class="title is-5"
            id=""
          >
            Browse Apps
          </h5>
          <h6
            class="title is-6 semyxxp-sub-heading"
            id=""
          >
            Search
          </h6>
          <form
            action="#"
          >
            <div
              class="field"
            >
              <div
                class="control has-icons-right"
              >
                <input
                  class="input is-primary"
                  data-test=""
                  id="search"
                  name="search"
                  placeholder="Search..."
                  type="text"
                  value=""
                />
                <span
                  class="icon is-right"
                >
                  <button
                    class="b101rvil-btn-search"
                    type="submit"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
            <div
              class="field pb-2 "
            >
              <div
                class="control"
              >
                <label
                  class="label"
                  for="searchBy"
                />
                <div
                  class="columns is-multiline is-gapless"
                  data-test=""
                >
                  <div
                    class="column is-full"
                    data-test=""
                  >
                    <div
                      class="radio-wrap"
                    >
                      <input
                        checked=""
                        class="checkbox "
                        id="searchByBy App Name"
                        name="searchBy"
                        type="radio"
                        value="appName"
                      />
                      <label
                        class="label"
                        for="searchByBy App Name"
                      >
                        By App Name
                      </label>
                    </div>
                  </div>
                  <div
                    class="column is-full"
                    data-test=""
                  >
                    <div
                      class="radio-wrap"
                    >
                      <input
                        class="checkbox "
                        id="searchByBy Company"
                        name="searchBy"
                        type="radio"
                        value="companyName"
                      />
                      <label
                        class="label"
                        for="searchByBy Company"
                      >
                        By Company
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
        <div
          class="syuub8n-sidebar-wrap"
        >
          <h6
            class="title is-6 semyxxp-sub-heading"
            id=""
          >
            Filter
          </h6>
          <ul
            class="lgshhkn-list-categories"
          >
            <li
              class="c7mfp8v-category-item chefj90-category-item-active"
            >
              <a
                href="#"
              >
                All
              </a>
            </li>
            <li
              class="c7mfp8v-category-item"
            >
              <a
                data-test-category-id="3"
                href="#"
              >
                Game
              </a>
            </li>
            <li
              class="c7mfp8v-category-item"
            >
              <a
                data-test-category-id="2"
                href="#"
              >
                entertainment
              </a>
            </li>
            <li
              class="c7mfp8v-category-item"
            >
              <a
                data-test-category-id="1"
                href="#"
              >
                education
              </a>
            </li>
            <li
              class="c7mfp8v-category-item"
            >
              <a
                data-test-category-id="DIRECT_API_APPS_FILTER"
                href="#"
              >
                Integration
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FilterForm should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <form
        action="#"
      >
        <div
          class="field"
        >
          <div
            class="control has-icons-right"
          >
            <input
              class="input is-primary"
              data-test=""
              id="search"
              name="search"
              placeholder="Search..."
              type="text"
              value=""
            />
            <span
              class="icon is-right"
            >
              <button
                class="b101rvil-btn-search"
                type="submit"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
        <div
          class="field pb-2 "
        >
          <div
            class="control"
          >
            <label
              class="label"
              for="searchBy"
            />
            <div
              class="columns is-multiline is-gapless"
              data-test=""
            >
              <div
                class="column is-full"
                data-test=""
              >
                <div
                  class="radio-wrap"
                >
                  <input
                    class="checkbox "
                    id="searchByBy App Name"
                    name="searchBy"
                    type="radio"
                    value="appName"
                  />
                  <label
                    class="label"
                    for="searchByBy App Name"
                  >
                    By App Name
                  </label>
                </div>
              </div>
              <div
                class="column is-full"
                data-test=""
              >
                <div
                  class="radio-wrap"
                >
                  <input
                    class="checkbox "
                    id="searchByBy Company"
                    name="searchBy"
                    type="radio"
                    value="companyName"
                  />
                  <label
                    class="label"
                    for="searchByBy Company"
                  >
                    By Company
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <form
      action="#"
    >
      <div
        class="field"
      >
        <div
          class="control has-icons-right"
        >
          <input
            class="input is-primary"
            data-test=""
            id="search"
            name="search"
            placeholder="Search..."
            type="text"
            value=""
          />
          <span
            class="icon is-right"
          >
            <button
              class="b101rvil-btn-search"
              type="submit"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
      <div
        class="field pb-2 "
      >
        <div
          class="control"
        >
          <label
            class="label"
            for="searchBy"
          />
          <div
            class="columns is-multiline is-gapless"
            data-test=""
          >
            <div
              class="column is-full"
              data-test=""
            >
              <div
                class="radio-wrap"
              >
                <input
                  class="checkbox "
                  id="searchByBy App Name"
                  name="searchBy"
                  type="radio"
                  value="appName"
                />
                <label
                  class="label"
                  for="searchByBy App Name"
                >
                  By App Name
                </label>
              </div>
            </div>
            <div
              class="column is-full"
              data-test=""
            >
              <div
                class="radio-wrap"
              >
                <input
                  class="checkbox "
                  id="searchByBy Company"
                  name="searchBy"
                  type="radio"
                  value="companyName"
                />
                <label
                  class="label"
                  for="searchByBy Company"
                >
                  By Company
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
